Ui fix images tabs aligning

--- a/app/ui/static/css/app.css
+++ b/app/ui/static/css/app.css
@@ -170,4 +170,10 @@
 
 .bootstrap-select {
     width: 196px !important;
-    }
+}
+
+.mg-bottom15 {
+    margin-bottom: 15px;
+}
+
+
